--- a/css/demo.css
+++ b/css/demo.css
@@ -2,44 +2,51 @@ body{
 	background-color: #000000;
 	box-sizing: border-box;
 	position: relative;
+	text-align: center;
+	padding: 10px;
+	width: 100%;
 }
 
 #header{
 	text-align: center;
 	font-size: 32px;
 	color: #00B7FF;
+	display: inline-block;
+	padding: 10px;
 }	
 
 #center{
-	box-sizing: border-box;
-	width: 90%;
+	color: #fff;
+	border: 1px solid #fff;
 	text-align: center;
-	border:  1px solid #ffffff;
-	color: #9F9F9F;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	position: absolute;
-	margin: auto;
+	margin-right: 30px;
+	margin-left: 30px;
 }
 
 
 #single{
 	box-sizing: border-box;
-	width: auto;
-	padding: 0px;
+	border: 1px solid red;
+	width: 100%;
 	background: #333333;
 }
 #pic{
 	box-sizing: border-box;
 	float: left;
-	width: 45%;
+	padding-left: 15px;
+	padding-top: 30px;
+	border: 1px solid blue;
+	width: 50%;
+}
+#pic img{
+	width: 100%;
 }
 #text{
 	box-sizing: border-box;
 	float: right;
 	width: 45%;
+	padding-right: 15px;
+	padding-top: 20px;
 }
 
 .clear{
